Added documentation file. Changed word file paths to be correct. Changed removal of last index to work with different versions